<?xml version="1.0"?>
<package format="2">
  <name>my_math_lib</name>
  <version>1.2.4</version>
  <description>
  This package is a test package for cross compile.
  </description>
  <maintainer email="renyunfan@outlook.com">Yunfan</maintainer>
  <license>GLPv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
